Cleaning up dependencies.

--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,7 @@
             "email": "kkroesch@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "influxdb/influxdb-php": "0.1.3"
+    }
 }
